# desk_ai

./: .gitignore  CMakeLists.txt  README_AI_SETUP.md  TTS_INTEGRATION.md  backend_server.py  convert_hand_image.py  convert_heart_image.py  convert_idle_image.py  convert_image.py  convert_smile_image.py  partitions.csv  requirements_backend.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  audio.c  audio.h  backend.c  backend.h  desk_ai.c  idf_component.yml  state.c  state.h  ui.c  ui.h  wifi.c  wifi.h
main/EXIO/: TCA9554PWR.c  TCA9554PWR.h
main/ui/: background_img.c  background_img.h  hand_img.c  hand_img.h  heart_img.c  heart_img.h  idle_img.c  idle_img.h  smile_img.c  smile_img.h
